--- a/index.html
+++ b/index.html
@@ -90,6 +90,15 @@
             class="text-xs px-2 py-0.5 rounded-full bg-slate-800 text-slate-500 uppercase tracking-wider font-bold"
           ></span>
         </div>
+
+        <button
+          onclick="toggleEditMode()"
+          id="edit-btn"
+          class="flex items-center gap-2 px-4 py-2 rounded-lg text-sm font-medium bg-slate-800 hover:bg-slate-700 text-slate-300 transition-colors"
+        >
+          <i data-lucide="settings" size="16"></i>
+          <span id="edit-btn-text">Configure</span>
+        </button>
       </header>
 
       <!-- Content Area -->
@@ -499,4 +508,3 @@
     </script>
   </body>
 </html>
-
